# gensrc

./: .gitignore  LICENSE  README.md  pyproject.toml
gensrc/: console.py
gensrc/templates/: header.hpp.j2  main.cpp.j2  main.py.j2
tests/: test_gensrc.py
