[tool.poetry]
name = "gensrc"
version = "0.1.0"
license = "MIT"
description = "Simple command-line source code file generator."
authors = ["Kevin Morris <kevr@0cost.org>"]
include = [
    "templates/main.cpp.j2",
]
packages = [
    { include = "gensrc" },
]

[tool.poetry.scripts]
gensrc = 'gensrc.console:run'

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
pygit2 = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
